feat(KSTIP-1733): fix sonarqube issues